--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
     "lenis": "^1.3.8",
     "lucide-react": "^0.536.0",
     "ogl": "^1.0.11",
@@ -34,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.4"
   }
